chore: Fixed mobile menu overlap with site alert banner (#2318)

--- a/src/components/mobile-menu-container/mobile-menu-container.module.css
+++ b/src/components/mobile-menu-container/mobile-menu-container.module.css
@@ -20,7 +20,6 @@
 	left: -150vw;
 	overflow-y: auto;
 	position: fixed;
-	top: var(--sticky-bars-height);
 	width: 100%;
 	z-index: 2;
 }
